--- a/index.html
+++ b/index.html
@@ -131,6 +131,48 @@ body {
 
 
 
+
+    @media (max-width: 480px) {
+ .divider{
+        margin-top: 50% !important;
+
+      }
+
+      .myimg{
+        max-width: 50% !important;
+      }
+
+      .btnnn{
+    display: flex;
+    justify-content: end;
+    margin-right: 5%;
+    margin-top :-2%;
+    gap: 5% !important;
+    font-size: 60% !important;
+
+}
+
+
+      
+      .cardd{
+        height: 85vh !important;
+        width: 90vw;
+     overflow-y: auto !important;
+      }
+.carousel-item {
+  height: auto !important;
+  overflow-y: auto !important;
+  max-height: 100% !important;
+}
+.con {
+  height: auto !important;
+  max-height: 100% !important;
+}
+
+      
+}
+
+
 .navbar {
   width: 100%;       
   display: flex;
